--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <div style="float:center">
 <div align=center>
 
-<iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
+   <iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
 
-<p><a href="https://player.fastcast4u.com/afreeapo" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
+<p><a href="https://us7.streamingpulse.com/3374/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
 <a href="http://ekxeradio.gr/shoutcast/" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=240, width=550, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a>
 
@@ -18,19 +18,19 @@
 
 <p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Diavlos Ena 99.7 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/b321291c4737dbd74d56780450ef44c0be9805d0/Radio_Lyxnos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Λύχνος |</a>
+<a href="https://lyxnosfotizon.gr/?radio_player=1902&preview" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=300, resizable=yes, location=yes'); return false;">| Ράδιο Λύχνος |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
+<a href="https://www.radioixalia.gr/modules/mod_hoicoi_radio/tmpl/popup.php?url=https://www.radioixalia.gr/" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=130, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
 
 <a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
 
 <p><a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/H Foni tis Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio to Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
+<a href="http://myradiostream.com/embed/basic.php?s=tofos1" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
 
 <!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
 
-<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio Christianity 90 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
+<a href="https://christianismos.gr/player.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=200, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
 
 <p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;http://www.bible.is/radio/GRKSFTN1DA&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
 
@@ -116,23 +116,24 @@
 
                                                                        <p> World Wide Christian Networks </p>
 
-<p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
-
-<input type="button" value="Love World USA" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f81cae1fec646c6e84b7c2003c6e42531b61a8ca/LoveWorld_USA.html&#39;,&#39;Love World USA&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="Love World Plus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/30bd8d8bc29a4fbc2108f6157399219fb84050e8/LoveWorld_Plus.html&#39;,&#39;Love World Plus&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="Love World SAT" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f438e7b682e84f747244fcb94580a8a073f564c6/LoveWorld_SAT.html&#39;,&#39;Love World SAT&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="Love World UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/0bc5f51f601f076bbec83e9e4b4cc50cd3855be8/LoveWorld_UK.html&#39;,&#39;Love World UK&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://www.lightcast.com/embed/player.php?&id=39565&type=live&#39;,&#39;Emmanuel TV&#39;,&#39;width=580,height=350&#39;)" />
 
 
+<input type="button" value="Loveworld USA" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/3b4e48b412851f502786abb7d2be0ba444e4a9ae/LoveWorld_USA.html&#39;,&#39;Love World USA&#39;,&#39;width=580,height=450&#39;)" />
 
-<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="Loveworld SAT" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f438e7b682e84f747244fcb94580a8a073f564c6/LoveWorld_SAT.html&#39;,&#39;Love World SAT&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/97c1b09cd0ec0b2e46e5c06d96e13463e1108a70/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Loveworld UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/0bc5f51f601f076bbec83e9e4b4cc50cd3855be8/LoveWorld_UK.html&#39;,&#39;Love World UK&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/15c305f524bde853ef7e2cc795f3fecaf71fcda2/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Hello Loveworld" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bed02c983def63f12e3ca52ef13825a11518fdb2/Hello_LoveWorld.html&#39;,&#39;Hello LoveWorld&#39;,&#39;width=580,height=350&#39;)" />
+
+
+
+<p><input type="button" value="Loveworld XP" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/3b4e48b412851f502786abb7d2be0ba444e4a9ae/Loveworld-XP.html&#39;,&#39;Love World Plus&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://www.god.tv/live-us/&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="GOD TV Prayer" onclick="window.open(&#39;https://www.god.tv/live-prayer/&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="TBN HD" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-live&#39;,&#39;TBN HD&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -142,17 +143,18 @@
 
 
 
-<p><input type="button" value="Daystar" onclick="window.open(&#39;https://embed.vhx.tv/videos/632434?api=1&autoplay=1&title=0&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="Daystar" onclick="window.open(&#39;https://www.lightcast.com/embed/player.php?id=37099&type=live&multiBitrate=1&autoplay=1&title=0&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/906113a59455132a33b33543431df613dbebe1bb/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://www1.cbn.com/sites/all/libraries/html5player/html5player.php?auto_play=true&videoId=5721888200001&live=true&platform=CBNNews.com%20Video&appName=CBNNews.com%20Video&applicationId=CBN_NEWS_VOD_PLAYER&messages=true&v=1&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;https://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=5721815535001&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://www1.cbn.com/sites/all/libraries/html5player/html5player.php?videoId=5721815535001&amp;auto_play=true&amp;live=true&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://watch.tbn.tv/videos/hillsong-channel&#39;,&#39;Hillsong Channel&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="TBN Inspire" onclick="window.open(&#39https://watch.tbn.org/videos/tbn-inspire&#39;,&#39;TBN Inspire&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Lakewood Church" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Salsa" onclick="window.open(&#39;https://watch.tbn.tv/videos/salsa&#39;,&#39;SALSA&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="TBN Africa" onclick="window.open(&#39;https://watch.tbn.org/live-channels/videos/tbn-africa&#39;,&#39;width=550,height=480&#39;)" />
+
 
 
 
@@ -177,14 +179,17 @@
 
 <input type="button" value="Bibel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="Johnchi Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;AGCOM&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39| ECG Church|&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="John Chi" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;AGCOM&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="WM Daniel" onclick="window.open(&#39;https://www.youtube.com/channel/UCKCww2g44WZIMZXYyNScWYA/live?autoplay=1&#39;,&#39ABUJA FOR CHRIST MEETING WITH WISEMAN DANIEL THANKSGIVING SERVICE&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Christopher Orji" onclick="window.open(&#39;https://www.youtube.com/channel/UCVuG_fLElXxA0KIsvcUOj0Q/live?autoplay=1&#39;,&#39;Christopher Orji Ministries&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Joseph Prince" onclick="window.open(&#39;https://www.youtube.com/user/JosephPrinceOnline/live?autoplay=1&#39;,&#39;Joseph Prince Ministries&#39;,&#39;width=580,height=350&#39;)" />
 
 
-<input type="button" value="Christopher Orji Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCVuG_fLElXxA0KIsvcUOj0Q/live?autoplay=1&#39;,&#39;Christopher Orji Ministries&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="Joseph Prince Ministries" onclick="window.open(&#39;https://www.youtube.com/user/JosephPrinceOnline/live?autoplay=1&#39;,&#39;Joseph Prince Ministries&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
 
 <p><input type="button" value="Celebration TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCrF3Zv8PGIT4R4f2LMQvQSQ/live?autoplay=1&#39;,&#39;Celebration TV&#39;,&#39;width=580,height=350&#39;)" />
@@ -203,18 +208,24 @@
 
 <input type="button" value="Guillermo Maldonado" onclick="window.open(&#39;https://www.youtube.com/channel/UCedqUkPC9Q7Rfau96oQkUTw/live?autoplay=1&#39;,&#39;Apostle Guillermo Maldonado&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="3ABN" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn.html&#39;,&#39;3ABN&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="3ABN International" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_international.html&#39;,&#39;3ABN International&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="3ABN Proclaim" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_proclaim.html&#39;,&#39;3ABN Proclaim&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="3ABN Dare to Dream" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_daretodream.html&#39;,&#39;3ABN Dare to Dream&#39;,&#39;width=580,height=350&#39;)" />
-
-<input type="button" value="3ABN Praise Him" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_praise_him.html&#39;,&#39;3ABN Praise Him&#39;,&#39;width=580,height=350&#39;)" />
 
 
-<p><input type="button" value="Hello LoveWorld" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bed02c983def63f12e3ca52ef13825a11518fdb2/Hello_LoveWorld.html&#39;,&#39;Hello LoveWorld&#39;,&#39;width=580,height=350&#39;)" />
+
+<p><input type="button" value="3ABN" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/e76d8701cf3b109fa5758851bf05d9150802e0e0/3abn.html&#39;,&#39;3ABN&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN International" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10372e0afcc25cbfd3afc53df506e40b86f148ad/3abn_international.html&#39;,&#39;3ABN International&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Proclaim" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/23fa99007c763fd0520d7a96585647b86f1f6d9f/3abn_proclaim.html&#39;,&#39;3ABN Proclaim&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Dare to Dream" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/dcd7db82491702680c3de351c44006f790508f04/3abn_daretodream.html&#39;,&#39;3ABN Dare to Dream&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Praise Him" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f6ebbc9e9246827d8f7746af522812ec23a247b1/3abn_praise_him.html&#39;,&#39;3ABN Praise Him&#39;,&#39;width=580,height=350&#39;)" />
+
+
+
+
+
+<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -223,6 +234,8 @@
 <input type="button" value="GLC TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/a6e94c82308ab278b2c292681f90530ca3461634/GLC_TV.html&#39;,&#39;GLC TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Inspiration TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/e75fa32855589628ed1d398bb3fe12c3c5bb4023/Inspiration_TV.html&#39;,&#39;Inspiration TV&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
    
 <!--  -->
