--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div style="float:center">
 <div align=center>
 
-   <iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
+<iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
 
 <p><a href="https://us7.streamingpulse.com/3374/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
@@ -151,18 +151,18 @@
 
 <input type="button" value="TBN Inspire" onclick="window.open(&#39https://watch.tbn.org/videos/tbn-inspire&#39;,&#39;TBN Inspire&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://live.lakewoodchurch.com/&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="TBN Africa" onclick="window.open(&#39;https://watch.tbn.org/live-channels/videos/tbn-africa&#39;,&#39;width=550,height=480&#39;)" />
 
 
 
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/2e5bc6372226e97a04295fca8ba016e712a164fc/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/0ce60935df931e3aa6db3effc150a1edd0b80afb/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
 
 <input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Miracle Channel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/befadd0cee0b4e431f021b8e2e08c483dbb4343b/miracle_channel.html&#39;,&#39;Joyce Meyer&#39;,&#39;width=600,height=380&#39;)" />
+<input type="button" value="Miracle Channel" onclick="window.open(&#39;https://www.miraclechannel.ca/live&#39;,&#39;Joyce Meyer&#39;,&#39;width=600,height=600&#39;)" />
 
 
 <input type="button" value=" World Changers" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
@@ -179,7 +179,7 @@
 
 <input type="button" value="Bibel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39| ECG Church|&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39| ECG Church|&#39;,&#39;width=580,height=450&#39;)" />
 
 <input type="button" value="John Chi" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;AGCOM&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -196,7 +196,7 @@
 
 <input type="button" value="AMI Pastor Alph Lukau" onclick="window.open(&#39;https://www.youtube.com/channel/UCmBMGitwFg3dDFNtOSQT1JQ/live?autoplay=1&#39;,&#39;AMI&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="The Good News Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC-tEjU3PrA8aGhxa5WpaJwA/live?autoplay=1&#39;,&#39;Prophet Uebert Angel&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="The Good News Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC-tEjU3PrA8aGhxa5WpaJwA/live?autoplay=1&#39;,&#39;Prophet Uebert Angel&#39;,&#39;width=580,height=450&#39;)" />
 
 <input type="button" value="Christ Mercyland" onclick="window.open(&#39;https://www.youtube.com/channel/UCwdHnoBwdoccyGV1bpetYWg/live?autoplay=1&#39;,&#39;Christ Mercyland &#39;,&#39;width=580,height=350&#39;)" />
 
@@ -204,7 +204,7 @@
 
 <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
 
-<input type="button" value="Kenneth Copeland" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10adca2bc9d5da15e0c1677a992144e7c46b73bb/Kenneth_Copeland_Ministries.html&#39;,&#39;Kenneth Copeland&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Kenneth Copeland" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/3a6350061bb4ede033c277b23260398680d49c0e/VICTORY_Channel.html&#39;,&#39;Kenneth Copeland&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Guillermo Maldonado" onclick="window.open(&#39;https://www.youtube.com/channel/UCedqUkPC9Q7Rfau96oQkUTw/live?autoplay=1&#39;,&#39;Apostle Guillermo Maldonado&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -225,9 +225,7 @@
 
 
 
-<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
-
-<input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="HisChannel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f447a43f249eb40f05e7e7e4984fda28f903ee52/HisChannel.html&#39;,&#39;HisChannel&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -236,7 +234,6 @@
 <input type="button" value="Inspiration TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/e75fa32855589628ed1d398bb3fe12c3c5bb4023/Inspiration_TV.html&#39;,&#39;Inspiration TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
-
    
 <!--  -->
 
