--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <a href="https://christianismos.gr/player.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=200, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
 
-<p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;http://www.bible.is/radio/GRKSFTN1DA&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
+<p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;https://live.bible.is/bible/ELLELL/MAT/1&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
 
-   <input type="button" value="Καινή Διαθήκη -Αρχαίο 1904-" onclick="window.open(&#39;http://www.bible.is/radio/GRKEPTN1DA&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=500,height=530&#39;)" />
+   <input type="button" value="Καινή Διαθήκη -Αρχαίο 1904-" onclick="window.open(&#39;https://live.bible.is/bible/ELLAPE/MAT/1?audio_type=audio&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=500,height=530&#39;)" />
 
                                                         <!--"V    I    D    E    O    S" /> -->
 
@@ -234,6 +234,7 @@
 <input type="button" value="Inspiration TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/e75fa32855589628ed1d398bb3fe12c3c5bb4023/Inspiration_TV.html&#39;,&#39;Inspiration TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+
    
 <!--  -->
 
