--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <div style="float:center">
 <div align=center>
 
+
 <iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
 
 <p><a href="https://us7.streamingpulse.com/3374/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
@@ -12,29 +13,40 @@
 
 <a href="https://rawcdn.githack.com/grchannels/data/9ba686e2fdae8d65cb03655ff147e98b471fcac3/Radio Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
+
 <p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Alpha Omega Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Kanali 7 Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
+<a href="http://www.kanali7.com/%ce%b6%cf%89%ce%bd%cf%84%ce%b1%ce%bd%ce%ae-%ce%bc%ce%b5%cf%84%ce%ac%ce%b4%ce%bf%cf%83%ce%b7/" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=450, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
+
 
 <p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Diavlos Ena 99.7 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
 
 <a href="https://lyxnosfotizon.gr/?radio_player=1902&preview" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=300, resizable=yes, location=yes'); return false;">| Ράδιο Λύχνος |</a>
 
-<a href="https://www.radioixalia.gr/modules/mod_hoicoi_radio/tmpl/popup.php?url=https://www.radioixalia.gr/" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=130, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
+<a href="http://78.46.128.148:5001/index.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=800, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία & Ρέντης |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
 
-<p><a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/H Foni tis Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
+<p><a href="https://radioplayer.link/iframe/index.php?autoplay=stop&name=JESUS CHANNEL&logo=&bgcolor=D8D8D8&textcolor=FF1F13&v=2&stream=https://sc.cast-control.eu:8058/stream" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Jesus Channel |</a>
 
-<a href="http://myradiostream.com/embed/basic.php?s=tofos1" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
-
-<!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
+<a href="http://sh.onweb.gr:8610/stream" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Μελωδία FM 106.9 Κως |</a>
 
 <a href="https://christianismos.gr/player.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=200, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
 
+<p><a href="https://i8.streams.ovh/ic/radioelp/stream" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=200, resizable=yes, location=yes'); return false;">| Ραδιο Ελπίδα ΑΕΠ Ρόδος |</a>
+
+<a href="http://207.244.66.85:8109/;" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=200, resizable=yes, location=yes'); return false;">| Christian Truth Βοιωτία |</a>
+
+
+    <!-- <a href="http://myradiostream.com/embed/basic.php?s=tofos1" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
+    <!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
+    <!-- <a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/H Foni tis Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
+
+
 <p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;https://live.bible.is/bible/ELLELL/MAT/1&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
 
-   <input type="button" value="Καινή Διαθήκη -Αρχαίο 1904-" onclick="window.open(&#39;https://live.bible.is/bible/ELLAPE/MAT/1?audio_type=audio&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=500,height=530&#39;)" />
+<input type="button" value="Καινή Διαθήκη -Αρχαίο 1904-" onclick="window.open(&#39;https://live.bible.is/bible/ELLAPE/MAT/1?audio_type=audio&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=500,height=530&#39;)" />
+
+
 
                                                         <!--"V    I    D    E    O    S" /> -->
 
@@ -88,7 +100,9 @@
 
 <input type="button" value="Hope Center Church" onclick="window.open(&#39;https://www.youtube.com/channel/UCZtQAv_d75OM6ZmHKlpJlhQ/live?autoplay=1&#39;,&#39;Hope Center Church Thessaloniki&#39;,&#39;width=550,height=480&#39;)" />
 
-<p><input type="button" value="Eκ. Xρ. Eλ." onclick="window.open(&#39;https://www.youtube.com/channel/UC2_jLK32_6BfVVhKCgDJieg/live?autoplay=1&#39;,&#39;ΕΚΧΕ&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="JesusTV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/ba20afa4e7c5e82be54f35249115c5256abf6350/JesusTV.html&#39;,&#39;JesusTV&#39;,&#39;width=580,height=450&#39;)" />
+
+<input type="button" value="Eκ. Xρ. Eλ." onclick="window.open(&#39;https://www.youtube.com/channel/UC2_jLK32_6BfVVhKCgDJieg/live?autoplay=1&#39;,&#39;ΕΚΧΕ&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Logos Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC7zSdR2P29r-KSNnQASJfPA/live?autoplay=1&#39;,&#39;Logos Church&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -113,6 +127,9 @@
 <input type="button" value="Ε.Ε.Ε. Πειραιά" onclick="window.open(&#39;https://www.youtube.com/channel/UCgmOX8ZbhpIRTiD6KJzeewQ/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Πειραιά&#39;,&#39;width=480,height=400&#39;)" />
 
 <input type="button" value="Ε.Ε.Ε. Βόλου" onclick="window.open(&#39;https://www.youtube.com/channel/UCusu9HCsvYfbNPtA_W9KQ8A/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Βόλου&#39;,&#39;width=480,height=400&#39;)" />
+
+<p><input type="button" value="Η Φωνή της Αγάπης" onclick="window.open(&#39;https://www.youtube.com/@thevoiceoflove-hfonitisagapis/live&#39;,&#39;Η Φωνή της Αγάπης&#39;,&#39;width=480,height=400&#39;)" />
+
 
                                                                        <p> World Wide Christian Networks </p>
 
@@ -151,7 +168,7 @@
 
 <input type="button" value="TBN Inspire" onclick="window.open(&#39https://watch.tbn.org/videos/tbn-inspire&#39;,&#39;TBN Inspire&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://live.lakewoodchurch.com/&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://live.lakewoodchurch.com/&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=600&#39;)" />
 
 <input type="button" value="TBN Africa" onclick="window.open(&#39;https://watch.tbn.org/live-channels/videos/tbn-africa&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -235,6 +252,23 @@
 
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
+
+<!-- <a href="https://www.radioixalia.gr/modules/mod_hoicoi_radio/tmpl/popup.php?url=https://www.radioixalia.gr/" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=130, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>-->
+
+
+
+<!-- <input type="button" value="ΕΑΕΠ Κω" onclick="window.open(&#39;https://www.youtube.com/channel/UCmfWvWJH_vpdRqVFWPXyEuQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Κω&#39;,&#39;width=645,height=400&#39;)" /> -->
+<!-- <input type="button" value="JUCE" onclick="window.open(&#39;https://watch.tbn.tv/videos/juce&#39;,&#39;JUCE TV&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!--<input type="button" value="ΕΑΕΠ Λευκωσίας" onclick="window.open(&#39;https://www.youtube.com/channel/UC-fb9xpm7qyKVwbcV2V8E1A/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />-->
+
+<!-- <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Creflo Dollar 24/7" onclick="window.open(&#39;http://www.lightcast.com/embed/player.php?id=14664&type=live&tvButtonID=worldchangers&ratio=16:9&autoStart=1&playlistPos=inside&playlistSize=100&skinColor=&width=600&height=380&#39;,&#39;Creflo Dollar&#39;,&#39;width=600,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />  -->
+
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
    
 <!--  -->
 
